# autodidakt

./: .gitignore  CLAUDE.md  goal.md  pyproject.toml
.claude/: settings.json
.claude/commands/: discover.md
autodiscover/: checkpointing.py  completers.py  config.py  renderers.py  tokenizer.py  trace.py  types.py  utils.py
autodiscover/backends/: __init__.py  protocol.py  types.py
autodiscover/backends/mlx/: __init__.py  lm_server.py  sampling.py  training.py
autodiscover/backends/mlx/tests/: test_lm_server.py  test_sampling.py  test_training.py
autodiscover/backends/tinker/: __init__.py  sampling.py  training.py
autodiscover/backends/tinker/tests/: test_sampling.py  test_training.py
autodiscover/cli/: test_trainer_server.py  trainer_server.py
autodiscover/sampling/: completers.py
autodiscover/server/: api.py  archive.py  sampling.py  schemas.py  state.py  test_sampling.py  test_state.py  training.py
autodiscover/server/tests/: test_archive.py  test_state.py
autodiscover/training/: data.py  step.py
discover/examples/erdos_min_overlap/: env.py
discover/ttt_discover/: discovery.py
docs/: local-deployment-smoke.md  local-deployment.md
important_papers/ttt-discover/: 00_abstract.md  01_introduction.md  02_preliminaries.md  03_learning_to_discover.md  04_applications.md  05_related_works.md  06_future_work.md  07_acknowledgments.md  appendix_a_training_details.md  appendix_b_mathematics.md  appendix_c_kernel_engineering.md  appendix_d_algorithm_engineering.md  appendix_e_single_cell_analysis.md  appendix_f_prompts.md  references.md
test_problems/erdos_min_overlap/: README.md  eval.py  evaluator.py  initial_state.py  results.csv
