[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodiscover"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic",
  "chz",
  "fastapi",
  "httpx",
  "numpy",
  "pydantic",
  "scipy>=1.17.1",
  "torch",
  "transformers",
  "uvicorn",
  "wandb",
]

[project.optional-dependencies]
tinker = ["tinker"]
mlx = [
  "mlx",
  "mlx-lm>=0.31.3",
]
# Combine if both backends are wanted in one venv (e.g. CI).
all = [
  "autodiscover[tinker,mlx]",
]

[tool.setuptools.packages.find]
include = ["autodiscover*"]
exclude = ["discover*", "scripts*", "runs*", "important_papers*", "tinker_log*", "docs*"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
